--- a/templates/products.html
+++ b/templates/products.html
@@ -43,7 +43,7 @@
                                         <a class="btn btn-light " href="/logout" role="button">Cerrar Sesión</a>
                                     {% else %}
                                     <a class="btn btn-light " href="/registro" role="button">Crear una Cuenta</a>
-                                    <a class="btn btn-light " href="/inicio" role="button">Iniciar Sesión</a>
+                                    <a class="btn btn-light " href="/login" role="button">Iniciar Sesión</a>
                                     {% endif %} 
                                 </div>
                             </div>
