--- a/templates/cart.html
+++ b/templates/cart.html
@@ -98,7 +98,7 @@
                     {% endif %}
                     {% if username %}
                         <div class="shop-items">
-                            {%for k,v in productos.items() %}
+                            {%for k,v in carrito['productos'].items() %}
                             <div class="shop-item">
                                 <span class="shop-item-title">{{  v['title'] }}</span>
                                 <img class="shop-item-image" src="{{  v['thumbnail'] }}">
@@ -111,6 +111,7 @@
                             {%endfor %}
                         </div>
                         {% if pedido %}
+                        <span class="shop-item-price"><strong>Cantidad a pagar: </strong>${{  carrito['total'] }}</span>
                         <button class="btn btn-warning shop-item-button" type="submit" value="pedido" name="boton">Realizar pedido</button>
                         {% endif %}
                     {% endif %}
