--- a/templates/cart.html
+++ b/templates/cart.html
@@ -55,6 +55,9 @@
             <form action="/cart" method="GET">
                 <input type="image" src="static/images/carrito.png" class="rounded float-start" alt="IMAGE">
             </form>
+            <form action="/pedidos" method="GET">
+                <input type="image" src="static/images/pedidos.png" style="height: 50px;" class="rounded float-start" alt="IMAGE">
+            </form>
         </div>
     </nav>
 
