--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,166 +1,57 @@
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Arioli - Carrito</title>
-    <!-- BOOTSTRAP 4 CDN -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <script src="js/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script>
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/italiana.css') }}">
-</head>
+<!DOCTYPE html>
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Arioli - Sabor de Herencia</title>
+        <!-- BOOTSTRAP 4 CDN -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+        <script src="static/js/admin.js"></script>
+        <script src="{{ url_for('static', filename='js/bootstrap.bundle.js') }}"></script>
+        <!-- CUSTOM CSS -->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/cart.css') }}">
+        <!-- <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css" rel="stylesheet" /> -->
+        <link rel="shortcut icon" href="#" />
+    </head>
 
 <body>
-    <!-- BARRA LOGO -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning bd-example">
-        <div class="container-fluid">
-            <form action="/" method="GET">
-                <input type="image" src="static/images/logorb.png" class="rounded float-start" alt="IMAGE">
-            </form>
-            <!-- BARRA BUSCAR -->
-            <div class="nav-item col-6" id="barramenu">
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                    <button class="btn btn-dark" type="submit">Buscar</button>
-                </form>
-            </div>
-
-            <!-- INICIAR SESION -->
-            <ul class="navbar-nav justify-content-end">
-                <li class="nav-item">
-                    <input type="image" src="static/images/user.png" class="btn btn-warning btn-lg" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"></button>
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Cuenta</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    {% if username %}
-                                        <label class="form-label">Bienvenido, {{ username }}</label><br>
-                                        <a class="btn btn-light " href="/logout" role="button">Cerrar Sesión</a>
-                                    {% else %}
-                                    <a class="btn btn-light " href="/registro" role="button">Crear una Cuenta</a>
-                                    <a class="btn btn-light " href="/login" role="button">Iniciar Sesión</a>
-                                    {% endif %} 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-
-            <!-- CARRITO -->
-            <form action="/cart" method="GET">
-                <input type="image" src="static/images/carrito.png" class="rounded float-start" alt="IMAGE">
-            </form>
-            <form action="/pedidos" method="GET">
-                <input type="image" src="static/images/pedidos.png" style="height: 50px;" class="rounded float-start" alt="IMAGE">
-            </form>
-        </div>
-    </nav>
-
-    <!-- BARRA COMIDAS -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
-        <div class="container-fluid justify-content-start">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/mexicana">Comida Mexicana</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/internacional">Comida Internacional</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/gourmet">Gourmet</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/especial">Especialidades</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/nosotros">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="mb-0 h5 nav-link active" aria-current="page" href="/products">Ver todo</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- PLATILLOS -->
-    <div class=""> 
-        <div class="text-md-center">
-            <section class="container content-section">
-                <form action="" method="post">
-                    {% if error %}
-                        <p class="error"> {{ error }}</p>
-                    {% endif %}
-                    {% if username %}
-                        <div class="shop-items">
-                            {%for k,v in carrito['productos'].items() %}
-                            <div class="shop-item">
-                                <span class="shop-item-title">{{  v['title'] }}</span>
-                                <img class="shop-item-image" src="{{  v['thumbnail'] }}">
-                                <div class="shop-item-details">
-                                    <span class="shop-item-price">${{  v['precio'] }}</span>
-                                    <span class="shop-item-price"><strong>Cantidad:</strong> {{  v['cantidad'] }}</span>
-                                </div>
-                                <button class="btn btn-warning shop-item-button" type="submit" value="{{ k }}" name="boton">Eliminar del Carrito</button>
-                            </div>
-                            {%endfor %}
-                        </div>
-                        {% if pedido %}
-                        <span class="shop-item-price"><strong>Cantidad a pagar: </strong>${{  carrito['total'] }}</span>
-                        <button class="btn btn-warning shop-item-button" type="submit" value="pedido" name="boton">Realizar pedido</button>
+    {% include 'navbar.html' %}
+    {% block content %}
+    <br></br>
+    <div class="">
+            <div class="text-md-center">
+                <section class="container content-section">
+                    <form action="" method="post">
+                        {% if error %}
+                            <p class="error"> {{ error }}</p>
                         {% endif %}
-                    {% endif %}
-                </form>
-            </section>
-        </div>
-    </div>
-
-    <br><br>
-    <!-- FOOTERS -->
-    <footer class="page-footer font-small unique-color-dark">
-        <div style="background-color: #ffc107;">
-            <div class="container">
-                <div class="row py-1 d-flex align-items-center">
-                    <div class="container text-center text-md-left mt-5">
-                        <div class="row mt-3">
-                            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                                <h6 class="text-uppercase font-weight-bold mb-0 h5">Arioli</h6>
-                                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                                <div class="">
-                                    <img src="static/images/logorb.png" class="rounded float-start" alt="IMAGE">
+                        {% if username %}
+                            <div class="shop-items">
+                                {%for k,v in carrito['productos'].items() %}
+                                <div class="shop-item">
+                                    <span class="shop-item-title">{{  v['title'] }}</span>
+                                    <img class="shop-item-image" src="{{  v['thumbnail'] }}">
+                                    <div class="shop-item-details">
+                                        <span class="shop-item-price">${{  v['precio'] }}</span>
+                                        <span class="shop-item-price"><strong>Cantidad:</strong> {{  v['cantidad'] }}</span>
+                                    </div>
+                                    <button class="btn btn-dark shop-item-button" type="submit" value="{{ k }}" name="boton">Eliminar del Carrito</button>
                                 </div>
+                                {%endfor %}
                             </div>
-                            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                                <h6 class="text-uppercase font-weight-bold mb-0 h5">Redes Sociales</h6>
-                                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                                <p><a href="#" class="link-dark">Facebook</a></p>
-                                <p><a href="#" class="link-dark">Instagram</a></p>
-                                <p><a href="#" class="link-dark">Twitter</a></p>
-                            </div>
-                            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                                <h6 class="text-uppercase font-weight-bold mb-0 h5">Contacto</h6>
-                                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                                <p><i class="fas fa-home mr-3"></i> Hermosillo, Sonora, México</p>
-                                <p><i class="fas fa-envelope mr-3"></i> norahp.arias@gmail.com</p>
-                                <p><a href="#" class="link-dark">Whatsapp</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-                © 2021 Copyright
+                            {% if pedido %}
+                            <span class="shop-item-price"><strong>Cantidad a pagar: </strong>${{  carrito['total'] }}</span>
+                            <button class="btn btn-warning shop-item-button" type="submit" value="pedido" name="boton">Realizar pedido</button>
+                            {% endif %}
+                        {% endif %}
+                    </form>
+                </section>
             </div>
         </div>
-    </footer>
+    {% endblock %}
+    {% include 'footer.html' %}
 </body>
 
 </HTML>
