--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -38,6 +38,11 @@
                         <img src="static/images/carrito.png" alt="" width="45" height="45" class="d-inline-block align-text-right">
                         Carrito</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/pedidos">
+                        <img src="static/images/pedidos.png" alt="" width="45" height="45" class="d-inline-block align-text-right">
+                        Pedidos</a>
+                    </li>
                   </ul>
                 </div>
         </nav>
