--- a/templates/cart.html
+++ b/templates/cart.html
@@ -23,6 +23,8 @@
     <div class="">
             <div class="text-md-center">
                 <section class="container content-section">
+                    <h1 class="display-4">Carrito de Compras</h1>
+                    <hr class="my-4">
                     <form action="" method="post">
                         {% if error %}
                             <p class="error"> {{ error }}</p>
