--- a/templates/products.html
+++ b/templates/products.html
@@ -21,6 +21,8 @@
         <div class="">
             <div class="text-md-center">
                 <section class="container content-section">
+                    <h1 <br class="display-4">Todos Nuestros Productos </br></h1>
+                    <hr class="my-4">
                     <form action="" method="post">
                         <select name="category" class="form-select" style="max-width:20%;" id="floatingSelect">
                             {% for category in categories %}
