--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,20 +1,18 @@
 <style>
-        #footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            /* Height of the footer*/
-            height: 80px;
-            background: #FA936D;
+        footer {
+                bottom: 0;
+                width: 100%;
+                text-align: center;
+                background-color: #FA936D;
+                color: white;
+                height: 80px;
         }
 </style>
 
-<center>
-        <div id="footer">
-                <div class="col-lg-6 mx-auto">
-                        <div class="text-center p-4 fw-bold">
-                               © 2022 Copyright
-                        </div>
+<footer>
+        <div class="col-lg-6 mx-auto">
+                <div class="text-center p-4 fw-bold">
+                        © 2022 Copyright
                 </div>
         </div>
-</center>
+</footer>
