button change Cuenta

--- a/templates/cuenta.html
+++ b/templates/cuenta.html
@@ -26,7 +26,7 @@
                 {% if username %}
                 <p class="lead">
                   <label class="form-label">Bienvenido, {{ username }} </label><br>
-                  <a class="btn btn-light " href="/logout" role="button">Cerrar Sesión</a> {% else %}
+                  <a class="btn btn-dark " href="/logout" role="button">Cerrar Sesión</a> {% else %}
                   <a class="btn btn-dark btn-lg" href="/login" role="button">Iniciar Sesión</a>
                   <a class="btn btn-dark btn-lg" href="/registro" role="button">Registrarme</a> {% endif %}
                 </p>
